tg-1278 [FE] agrega estilos en Cards de Problemas

--- a/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/components/problemas/problemas.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/components/problemas/problemas.component.html
@@ -1,38 +1,57 @@
 <section id="title">
 	<h2 class="page-title" [translate]="'ambulatoria.paciente.problemas.TITLE'"></h2>
 </section>
-<section id="problemas" fxLayout="row">
-	<app-summary-card [header]="activos"
-					  [editable]="false">
-					  <mat-list id="lista-problemas-activos" *ngIf="activeProblems?.length > 0 else noInfo">
-						<mat-list-item *ngFor="let problem of activeProblems">
-							{{ problem.snomed.pt}} - {{problem.startDate }}
+
+<ng-template #noInfo>
+	<app-no-data></app-no-data>
+</ng-template>
+<section id="problemas" fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="20px">
+		<div fxFlex="33%">
+			<app-summary-card [header]="activos" [editable]="false">
+				<mat-list id="lista-problemas-activos" *ngIf="activeProblems?.length > 0 else noInfo">
+					<div fxLayout="row" fxLayoutAlign="space-between center" *ngFor="let problem of activeProblems">
+						<mat-list-item>
+							<span class="left-align content mat-body">
+								{{ problem.snomed.pt}}
+							</span>
+							<span class="right-align content mat-body">
+								{{problem.startDate }}
+							</span>
 						</mat-list-item>
-					  </mat-list>
-					  <ng-template #noInfo>
-						<app-no-data></app-no-data>
-					  </ng-template>
-	</app-summary-card>
-	<app-summary-card [header]="cronicos"
-					  [editable]="false">
-					  <mat-list id="lista-problemas-cronicos" *ngIf="chronicProblems?.length > 0 else noInfo">
-						<mat-list-item *ngFor="let problem of chronicProblems">
-							{{ problem.snomed.pt}} - {{problem.startDate }}
+					</div>
+				</mat-list>
+			</app-summary-card>
+		</div>
+		<div fxFlex="33%">
+			<app-summary-card [header]="cronicos" [editable]="false">
+				<mat-list id="lista-problemas-cronicos" *ngIf="chronicProblems?.length > 0 else noInfo">
+					<div fxLayout="row" fxLayoutAlign="space-between center" *ngFor="let problem of chronicProblems">
+						<mat-list-item>
+							<span class="left-align content mat-body">
+								{{ problem.snomed.pt}}
+							</span>
+							<span class="right-align content mat-body">
+								{{problem.startDate }}
+							</span>
 						</mat-list-item>
-					  </mat-list>
-					  <ng-template #noInfo>
-						<app-no-data></app-no-data>
-					  </ng-template>
-	</app-summary-card>
-	<app-summary-card [header]="resueltos"
-					  [editable]="false">
-					  <mat-list id="lista-problemas-resueltos" *ngIf="solvedProblems?.length > 0 else noInfo">
-						<mat-list-item *ngFor="let problem of solvedProblems">
-							{{ problem.snomed.pt}} - {{problem.startDate }}
+					</div>
+				</mat-list>
+			</app-summary-card>
+		</div>
+		<div fxFlex="33%">
+			<app-summary-card [header]="resueltos" [editable]="false">
+				<mat-list id="lista-problemas-resueltos" *ngIf="solvedProblems?.length > 0 else noInfo">
+					<div fxLayout="row" fxLayoutAlign="space-between center" *ngFor="let problem of solvedProblems">
+						<mat-list-item>
+							<span class="left-align content mat-body">
+								{{ problem.snomed.pt}}
+							</span>
+							<span class="right-align content mat-body">
+								{{problem.startDate }}
+							</span>
 						</mat-list-item>
-					  </mat-list>
-					  <ng-template #noInfo>
-						<app-no-data></app-no-data>
-					  </ng-template>
-	</app-summary-card>
+					</div>
+				</mat-list>
+			</app-summary-card>
+		</div>
 </section>
