tg-1297 [FE] Corrige formato de fecha yyy-mm-dd en Problemas - Ambulatoria

--- a/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/components/problemas/problemas.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/components/problemas/problemas.component.html
@@ -8,8 +8,8 @@
 <section id="problemas" fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="20px">
 		<div fxFlex="33%">
 			<app-summary-card [header]="activos" [editable]="false">
-				<mat-list id="lista-problemas-activos" *ngIf="activeProblems?.length > 0 else noInfo">
-					<div fxLayout="row" fxLayoutAlign="space-between center" *ngFor="let problem of activeProblems">
+				<mat-list id="lista-problemas-activos" *ngIf="(activeProblems$ | async )?.length > 0 else noInfo">
+					<div fxLayout="row" fxLayoutAlign="space-between center" *ngFor="let problem of (activeProblems$ | async)">
 						<mat-list-item>
 							<span class="left-align content mat-body">
 								{{ problem.snomed.pt}}
@@ -24,8 +24,8 @@
 		</div>
 		<div fxFlex="33%">
 			<app-summary-card [header]="cronicos" [editable]="false">
-				<mat-list id="lista-problemas-cronicos" *ngIf="chronicProblems?.length > 0 else noInfo">
-					<div fxLayout="row" fxLayoutAlign="space-between center" *ngFor="let problem of chronicProblems">
+				<mat-list id="lista-problemas-cronicos" *ngIf="(chronicProblems$ | async)?.length > 0 else noInfo">
+					<div fxLayout="row" fxLayoutAlign="space-between center" *ngFor="let problem of (chronicProblems$ | async)">
 						<mat-list-item>
 							<span class="left-align content mat-body">
 								{{ problem.snomed.pt}}
@@ -40,8 +40,8 @@
 		</div>
 		<div fxFlex="33%">
 			<app-summary-card [header]="resueltos" [editable]="false">
-				<mat-list id="lista-problemas-resueltos" *ngIf="solvedProblems?.length > 0 else noInfo">
-					<div fxLayout="row" fxLayoutAlign="space-between center" *ngFor="let problem of solvedProblems">
+				<mat-list id="lista-problemas-resueltos" *ngIf="(solvedProblems$ | async)?.length > 0 else noInfo">
+					<div fxLayout="row" fxLayoutAlign="space-between center" *ngFor="let problem of (solvedProblems$ | async)">
 						<mat-list-item>
 							<span class="left-align content mat-body">
 								{{ problem.snomed.pt}}
