--- a/front-end/webapp/src/app/modules/camas/components/filtros-camas/filtros-camas.component.html
+++ b/front-end/webapp/src/app/modules/camas/components/filtros-camas/filtros-camas.component.html
@@ -1,1 +1,54 @@
-<p>filtros-camas works!</p>
+<form [formGroup]="form" fxLayout="column" fxLayoutGap="10px">
+    <div fxLayout="row" fxLayoutAlign="space-between start">
+        <mat-label [translate]="'gestion-camas.filters.FREE_BEDS'"></mat-label>
+        <mat-slide-toggle formControlName="filled" (change)="filterChange()"></mat-slide-toggle>
+    </div>
+
+    <mat-form-field appearance="outline">
+        <mat-label [translate]="'gestion-camas.filters.SECTOR'"></mat-label>
+        <mat-select formControlName="sectors" (selectionChange)="filterChange()" name="sector">
+            <mat-option *ngFor="let sector of sectors" [value]="sector.sectorId">
+                {{sector.sectorDescription | translate}}
+            </mat-option>
+        </mat-select>
+        <button id="clear-specialty" type="button" mat-button *ngIf="form.controls.sectors.value" matSuffix color="warn"
+            mat-icon-button (click)="clear(form.controls.sectors); $event.stopPropagation()">
+            <mat-icon>close</mat-icon>
+        </button>
+    </mat-form-field>
+
+    <mat-form-field appearance="outline">
+        <mat-label [translate]="'gestion-camas.filters.SPECIALITY'"></mat-label>
+        <mat-select formControlName="specialities" (selectionChange)="filterChange()" name="speciality">
+            <mat-option *ngFor="let speciality of specialities" [value]="speciality.specialityId">
+                {{speciality.specialityDescription | translate}}
+            </mat-option>
+        </mat-select>
+        <button id="clear-specialty" type="button" mat-button *ngIf="form.controls.specialities.value" matSuffix
+            color="warn" mat-icon-button (click)="clear(form.controls.specialities); $event.stopPropagation()">
+            <mat-icon>close</mat-icon>
+        </button>
+    </mat-form-field>
+
+    <mat-form-field appearance="outline">
+        <mat-label [translate]="'gestion-camas.filters.BED_CATEGORY'"></mat-label>
+        <mat-select formControlName="categories" (selectionChange)="filterChange()" name="category">
+            <mat-option *ngFor="let category of categories" [value]="category.categoryId">
+                {{category.categoryDescription | translate}}
+            </mat-option>
+        </mat-select>
+        <button id="clear-specialty" type="button" mat-button *ngIf="form.controls.categories.value" matSuffix color="warn"
+            mat-icon-button (click)="clear(form.controls.categories); $event.stopPropagation()">
+            <mat-icon>close</mat-icon>
+        </button>
+    </mat-form-field>
+
+    <mat-form-field appearance="outline">
+        <mat-label [translate]="'gestion-camas.filters.PROBABLE_DISCHARGE_DATE'"></mat-label>
+        <input matInput id="date" [matDatepicker]="myDatepicker" formControlName="probableDischargeDate" (dateChange)="filterChange()">
+        <mat-icon id="clear-probable-discharge-date" *ngIf="form.controls.probableDischargeDate.value" matDatepickerToggleIcon 
+            (click)="clear(form.controls.probableDischargeDate); $event.stopPropagation()" color="warn">close</mat-icon>
+        <mat-datepicker-toggle matSuffix [for]="myDatepicker"></mat-datepicker-toggle>
+        <mat-datepicker #myDatepicker startView="multi-year"></mat-datepicker>
+    </mat-form-field>
+</form>
