--- a/front-end/webapp/src/app/modules/turnos/routes/new-agenda/new-agenda.component.html
+++ b/front-end/webapp/src/app/modules/turnos/routes/new-agenda/new-agenda.component.html
@@ -95,7 +95,7 @@
 						</div>
 						<mat-form-field appearance="outline">
 							<input formControlName="endDate" id="endDate" matInput [matDatepicker]="endPicker"
-								(dateChange)="endDateChange($event)">
+								(dateChange)="getAllWeeklyDoctorsOfficeOcupation()">
 							<mat-datepicker-toggle matSuffix [for]="endPicker"></mat-datepicker-toggle>
 							<mat-datepicker #endPicker></mat-datepicker>
 						</mat-form-field>
@@ -164,10 +164,12 @@
 					</div>
 				</ng-template>
 
-				<mwl-calendar-week-view [viewDate]="viewDate" [events]="newAgendaService.events"
-					[hourSegmentTemplate]="weekViewHourSegmentTemplate" [headerTemplate]="headerTemplate"
-					[dayStartHour]="openingTime" [dayEndHour]="closingTime"
-					[hourSegments]="MINUTES_IN_HOUR / form.value.appointmentDuration" [weekStartsOn]="weekStartsOn">
+				<mwl-calendar-week-view [viewDate]="newAgendaService.getViewDate()" [events]="newAgendaService.getEvents()"
+										[hourSegmentTemplate]="weekViewHourSegmentTemplate"
+										[headerTemplate]="headerTemplate"
+										[dayStartHour]="openingTime" [dayEndHour]="closingTime"
+										[hourSegments]="newAgendaService.getMinutesInHour() / form.value.appointmentDuration"
+										[weekStartsOn]="newAgendaService.getWeekStartsOn()">
 				</mwl-calendar-week-view>
 
 				<div align="end">
