tg-1299 mock de servicios edicion y eliminacion de agenda, ver turno

--- a/front-end/webapp/src/app/modules/presentation/components/mock/mock.component.html
+++ b/front-end/webapp/src/app/modules/presentation/components/mock/mock.component.html
@@ -19,6 +19,9 @@
 		<mat-card-content style="white-space: pre;">
 			{{load.fetch | json}}
 		</mat-card-content>
+		<mat-card-footer>
+			{{load.comments}}
+		</mat-card-footer>
 	</mat-card>
 </div>
 
