--- a/front-end/webapp/src/app/modules/presentation/components/mock/mock.component.scss
+++ b/front-end/webapp/src/app/modules/presentation/components/mock/mock.component.scss
@@ -24,5 +24,10 @@
 			background-color: #e0e0e0;
 			color: #828282;
 		}
+		mat-card-footer {
+			font-size: 14px;
+			font-style: italic;
+			padding-left: 10px;
+		}
 	}
 }
