tg-1306 FIX Error 500 al guardar nueva agenda

--- a/front-end/webapp/src/app/modules/turnos/routes/new-agenda/new-agenda.component.html
+++ b/front-end/webapp/src/app/modules/turnos/routes/new-agenda/new-agenda.component.html
@@ -83,7 +83,7 @@
 						</div>
 						<mat-form-field appearance="outline">
 							<input formControlName="startDate" id="startDate" matInput [matDatepicker]="initPicker"
-								(dateChange)="startDateChange($event)">
+								(dateChange)="getAllWeeklyDoctorsOfficeOcupation()">
 							<mat-datepicker-toggle matSuffix [for]="initPicker"></mat-datepicker-toggle>
 							<mat-datepicker #initPicker></mat-datepicker>
 						</mat-form-field>
