tg-1357/1359 fix falta categoria y se subrayan las camas ocupadas en detalle de cama

--- a/front-end/webapp/src/app/modules/camas/components/bed-detail/bed-detail.component.html
+++ b/front-end/webapp/src/app/modules/camas/components/bed-detail/bed-detail.component.html
@@ -35,6 +35,16 @@
                     </span>
                 </div>
             </mat-list-item>
+            <mat-list-item>
+                <div mat-line>
+                    <span class="mat-body-1" [translate]="'gestion-camas.detail.CATEGORY'"></span>
+                </div>
+                <div mat-line>
+                    <span class="mat-body-2">
+                        {{bedInfo.bed.bedCategory.description}}
+                    </span>
+                </div>
+            </mat-list-item>
             <mat-list-item id="days">
                 <div mat-line>
                     <span class="mat-body-1" [translate]="'gestion-camas.detail.ROOM'"></span>
