--- a/front-end/webapp/src/app/modules/camas/components/bed-filters/bed-filters.component.html
+++ b/front-end/webapp/src/app/modules/camas/components/bed-filters/bed-filters.component.html
@@ -49,6 +49,6 @@
         <mat-icon id="clear-probable-discharge-date" *ngIf="form.controls.probableDischargeDate.value" matDatepickerToggleIcon 
             (click)="clear(form.controls.probableDischargeDate); $event.stopPropagation()" color="warn">close</mat-icon>
         <mat-datepicker-toggle matSuffix [for]="myDatepicker"></mat-datepicker-toggle>
-        <mat-datepicker #myDatepicker startView="multi-year"></mat-datepicker>
+        <mat-datepicker #myDatepicker></mat-datepicker>
     </mat-form-field>
 </form>
